--- a/es-dms-site/yo/app/views/documents/search.html
+++ b/es-dms-site/yo/app/views/documents/search.html
@@ -1,5 +1,5 @@
 <div class="container widget-container" data-ng-controller="DocumentCtrl">
-	<h2>Documents Search</h2>
+	<h2>Documents Search2</h2>
 	<form data-ng-submit="search()" class="form-search">
 		<input type="text" class="input-xlarge" data-ng-model="criteria" />
 		<button type="button" class="btn btn-primary" data-ng-click="search()">Search</button>
