--- a/es-dms-site/yo/app/views/about/credits.html
+++ b/es-dms-site/yo/app/views/about/credits.html
@@ -6,11 +6,36 @@
 	</div>
 	<div class="modal-body">
 		<form class="form-horizontal">
-			
-			Developed by Richard Louapre
+			<div id="es-dms-img">
+				<img src="../images/about/es-dms.png" width="150" />
+			</div>
+			<div id="os-tech-img">
+				<img src="../images/about/angularjs.png" width="75" />
+				<img src="../images/about/elasticsearch.png" width="75" />	
+				<img src="../images/about/html5.png" width="50" />
+				<img src="../images/about/css3.jpg" width="75" />
+				<img src="../images/about/javascript.png" width="50" />
+				<img src="../images/about/bootstrap.jpg" width="50" />
+				<img src="../images/about/activiti.png" width="75" />
+				<img src="../images/about/kibana.png" width="75" />
+				<img src="../images/about/java.jpg" width="50" />
+				<img src="../images/about/shiro.png" width="35" />
+				<img src="../images/about/tika.png" width="50" />
+				<img src="../images/about/apache.gif" width="50" />
+				<img src="../images/about/openNLP.jpg" width="75" />
+			</div>
+			<hr>
+			<h4>ES-DMS Developed by</h4><br>
+			<p id="credits">
+				<i>Richard Louapre..basically all..
+				<br>
+				Danilo Sandron...I did the credits...</i>
+			</p>
 			<br>
-			Danilo Sandron
-			
+			<p>
+				Using Richard's brain and lots of open source components.
+			</p>
+
 		</form>
 	</div>
 	<div class="modal-footer">
