--- a/es-dms-site/yo/app/views/main.html
+++ b/es-dms-site/yo/app/views/main.html
@@ -27,10 +27,13 @@
 			</ul>
 			<p data-ng-show="user.name" class="navbar-text pull-right">
 				Logged in as <a data-ng-click="showUserDetails()" class="navbar-link">{{ user.name }}</a>
+				
+				
 			</p>
-			<p id="about" >
+			<p class="navbar-text">
 				<a data-ng-click="showAboutDetails()" class="navbar-link"> About </a>
 			</p>
+
 		</div>
 	</div>
 
