--- a/es-dms-site/yo/app/views/about/credits.html
+++ b/es-dms-site/yo/app/views/about/credits.html
@@ -25,11 +25,11 @@
 				<img src="../images/about/openNLP.jpg" width="75" />
 			</div>
 			<hr>
-			<h4>ES-DMS Developed by</h4><br>
+			<h4>ES-DMS V. {{system.version}} Developed by</h4><br>
 			<p id="credits">
 				<i>Richard Louapre..basically all..
 				<br>
-				Danilo Sandron...I did the credits...</i>
+				Danilo Sandron...did the credits...</i>
 			</p>
 			<br>
 			<p>
@@ -41,4 +41,4 @@
 	<div class="modal-footer">
 		<button type="button" class="btn" data-ng-click="close()">OK</button>
 	</div>
-</div>
+</div>v
